# rust-ai-laoshi

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/ai-laoshi-cli/: Cargo.toml
crates/ai-laoshi-cli/src/: error.rs  main.rs
crates/ai-laoshi-cli/src/utils/: cli.rs  mod.rs
crates/ai-laoshi-core/: Cargo.toml
crates/ai-laoshi-core/src/: error.rs  lib.rs
crates/ai-laoshi-core/src/ais/: assistant.rs  message.rs  mod.rs  types.rs
crates/ai-laoshi-core/src/laoshi/: config.rs  mod.rs
crates/ai-laoshi-core/src/utils/: files.rs  mod.rs
laoshi/: instructions.md  laoshi.toml
