[package]
name = "ai-laoshi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "laoshi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# -- App Libs
ai-laoshi-core = { version = "0.1.0", path = "../ai-laoshi-core" }
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Cli
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"
# -- Others
derive_more = { version = "1.0.0-beta", features = [
  "from",
  "display",
  "deref",
] }
